<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email:</string>
    <string name="registration">Registration</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="hof_id">Hofstra ID:</string>
    <string name="id">  7xxxxxxxx</string>
    <string name="next">Next Step</string>
    <string name="input">...</string>
    <string name="home_button">Home</string>
    <string name="starred_button">Starred</string>
    <string name="yl_button">Your Listings</string>
    <string name="profile_button">Profile</string>
    <string name="db">DEPENDS ON DB</string>
    <string name="verification">Verify User Info</string>
    <string name="new_pass">New Password:</string>
    <string name="new_usn">New Username:</string>
    <string name="my_listings">My Listings</string>
    <string name="edit_list">Edit</string>
    <string name="del_list">Delete</string>
    <string name="db_title">Book Book Computer Smart Smart</string>
    <string name="price">$0.00</string>
    <string name="price_is">Price:</string>
    <string name="condition">Good</string>
    <string name="condition_is">Condition:</string>
    <string name="seller">Seller:   </string>
    <string name="author_is">Author:</string>
    <string name="author">Dr. Wrote Book</string>
    <string name="isbn_is">ISBN:</string>
    <string name="isbn">13-Digit ISBN</string>
    <string name="contact">Contact Seller</string>
    <string name="add_book">Add Book</string>
    <string name="new_price">New Price:</string>
    <string name="new_condition">New Condition:</string>
    <string name="new_isbn">New ISBN:</string>
    <string name="new_title">New Title:</string>
    <string name="login">Login</string>
    <string name="BookBazaar">Book Bazaar</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="create">Create Account</string>
    <string name="posted_by">Posted By:</string>
    <string name="textbook_title">Title</string>
    <string name="my_listing" />
    <string name="old_pass">Old Password:</string>
    <string name="X">X</string>
    <string name="nw">No worries, bud!</string>
    <string name="nw_sub">The Book Bazaar is one email away...</string>
    <string name="hofemail">  flast1@pride.hofstra.edu</string>
    <string name="send">Send</string>
    <string name="backtolog">Back to Login</string>
    <string name="heyuser">Hey</string>
    <string name="update">Update username and/ or password:</string>
    <string name="blank">Blank field leaves info unchanged</string>
    <string name="scotty">A ScottySwap© App</string>




</resources>
